[metadata]
name = lsun_room
version = attr: lsun_room.__VERSION__
author = Salas leVirve
author-email = gae.m.project@gmail.com
summary = An API toolkit for LSUN Room Layout dataset.
long_description = file: README.rst
project_url = https://github.com/leVirve/lsun-room

[options]
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
